<?xml version="1.0" encoding="utf-8"?>
<android.support.constraint.ConstraintLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent">



    <android.support.constraint.ConstraintLayout
        android:id="@+id/uploadLayout"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="@color/colorAccent"
        android:visibility="visible"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintBottom_toTopOf="@+id/uploadDownloadLayout">
    <ListView
        android:id="@+id/listView2"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:cacheColorHint="#00000000"
        android:divider="#808080"
        android:dividerHeight="1dp"
        android:transcriptMode="normal"
        android:visibility="visible" />

    </android.support.constraint.ConstraintLayout>




    <android.support.constraint.ConstraintLayout
        android:id="@+id/pauseCancelAllLayout"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent">

        <Button
            android:id="@+id/buttonPauseAll"
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:text="@string/pause_all"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintLeft_toLeftOf="parent"
            app:layout_constraintRight_toLeftOf="@+id/buttonCancelAll"
            app:layout_constraintHorizontal_chainStyle="spread"/>

        <Button
            android:id="@+id/buttonCancelAll"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:text="@string/cancel_all"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintLeft_toRightOf="@+id/buttonPauseAll" />

    </android.support.constraint.ConstraintLayout>

    <android.support.constraint.ConstraintLayout

        android:id="@+id/operationLayout"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_above="@id/pauseCancelAllLayout"
        android:layout_marginBottom="2dp"
        android:orientation="horizontal"
        app:layout_constraintBottom_toTopOf="@+id/pauseCancelAllLayout"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        >
        <!--app:layout_constraintBottom_toTopOf="@+id/pauseCancelAllLayout"-->
        <Button
            android:id="@+id/buttonPause"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/pause"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintLeft_toLeftOf="parent"
            app:layout_constraintRight_toLeftOf="@+id/buttonResume"
            app:layout_constraintHorizontal_chainStyle="spread"/>

        <Button
            android:id="@+id/buttonResume"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/resume"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintLeft_toRightOf="@+id/buttonPause"
            app:layout_constraintRight_toLeftOf="@+id/buttonCancel"
            app:layout_constraintHorizontal_chainStyle="spread"/>

        <Button
            android:id="@+id/buttonCancel"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/cancel"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintLeft_toRightOf="@+id/buttonResume"
            app:layout_constraintRight_toLeftOf="@+id/buttonDelete"
            app:layout_constraintHorizontal_chainStyle="spread"/>


        <Button
            android:id="@+id/buttonDelete"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/delete"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintLeft_toRightOf="@+id/buttonCancel"
            app:layout_constraintRight_toRightOf="parent"/>
    </android.support.constraint.ConstraintLayout>

    <android.support.constraint.ConstraintLayout
        android:id="@+id/uploadDownloadLayout"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="@color/colorAccent"
        android:visibility="visible"
        app:layout_constraintBottom_toTopOf="@+id/operationLayout"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent">

        <Button
            android:id="@+id/buttonUploadFile"
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:text="@string/upload_file"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintLeft_toLeftOf="parent"
            app:layout_constraintRight_toLeftOf="@+id/buttonUploadImage"
            app:layout_constraintHorizontal_chainStyle="spread"/>

        <Button
            android:id="@+id/buttonUploadImage"
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:text="@string/upload_image"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintRight_toRightOf="parent"
            app:layout_constraintLeft_toRightOf="@+id/buttonUploadFile"/>
    </android.support.constraint.ConstraintLayout>






</android.support.constraint.ConstraintLayout>
